<resources>
    <string name="app_name">BuyMyProduct</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="connexion_btn_text">Connexion</string>
    <string name="authentication_text">Authentification ...</string>
    <string name="error_email">Veuillez entrez un email valide</string>
    <string name="password_error_text">entre 4 et 10 caractères</string>
    <string name="header_text_login">Vous avez déja un compte? Connectez-vous</string>
    <string name="goto_register_activity_text">Pas encore de compte? Inscription</string>
    <string name="register_header_text">Créer un compte ! Commencez</string>
    <string name="register_btn_text">Valider</string>
    <string name="oto_login_activity_text">Déja un compte? Connexion</string>
    <string name="confirm_password_text">Confirmer password</string>
    <string name="non_identiques_password">Password non identiques</string>
    <string name="Search_product">Rechercher un produit</string>
    <string name="search">Recherche</string>
    <string name="login_text">Login</string>
    <string name="inscription_text">Inscription</string>
    <string name="profile_text">Profile</string>
    <string name="product_detail_title">Detail du produit</string>
    <string name="connexion_failed_text">Connexion échouée</string>
    <string name="User_exist_text">Cet Utilisateur existe déja</string>
    <string name="User_created_sucessfull_text">Compte créé avec Succès</string>
    <string name="label_report">Ajouter un commentaire</string>
    <string name="label_type_your_comment">Votre commentaire ici</string>
    <string name="label_submit">Envoyer</string>
    <string name="label_cancel">Annuler</string>
    <string name="add_comment_text">Veillez Ajouter un commentaire</string>
    <string name="deconnexion">Deconnexion</string>
    <string name="products_list">Liste des produits</string>
    <string name="Add_one_value_please">Veuillez modifier au moins une valeur</string>
    <string name="favorite_list">Liste des Favoris</string>
    <string name="add_product_in_favoris">Ajouter produit aux Favoris?</string>
    <string name="cancel_favorite">Annuler</string>
    <string name="add_product_to_favorite">Ajouter</string>
    <string name="favorite_Product_text">Produits Favoris</string>
    <string name="delete_product_favorite">Supprimez ce produit ?</string>
    <string name="Modify_User_text">Modification Effectuee avec succes</string>
</resources>
