<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.fadcode.buymyproduct.MainActivity">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:orderInCategory="100"
        android:title="@string/search"
        app:showAsAction="always"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item
        android:id="@+id/loginMenu"
        android:title="@string/login_text"
        app:showAsAction="never" />

    <item
        android:id="@+id/registerMenu"
        android:title="@string/inscription_text"
        app:showAsAction="never" />

    <item
        android:id="@+id/profilMenu"
        android:title="@string/profile_text"
        app:showAsAction="never" />

    <item
        android:id="@+id/deconnectMenu"
        android:title="@string/deconnexion"
        app:showAsAction="never" />

    <item
        android:id="@+id/listProductMenu"
        android:title="@string/products_list"
        app:showAsAction="never" />

</menu>