<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/acticity_padding">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                style="@style/HeaderText"
                android:padding="10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_slab"
                android:text="@string/register_header_text" />

            <ImageView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_register_hero"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_marginTop="25dp"
            android:padding="@dimen/acticity_padding"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_layout_register"
                android:layout_width="match_parent"
                app:errorEnabled="true"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/baseline_email_teal_a700_24dp"

                android:hint="@string/email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_editext_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/darkTextColor"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_layout_register"
                android:layout_width="match_parent"
                app:errorEnabled="true"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/password_24dp"
                app:endIconMode="password_toggle"
                android:hint="@string/password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_editext_register"
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    android:layout_height="wrap_content"
                    android:textColor="@color/darkTextColor"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirm_password_layout"
                android:layout_width="match_parent"
                app:errorEnabled="true"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/password_24dp"
                app:endIconMode="password_toggle"
                android:hint="@string/confirm_password_text"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirm_password_editext"
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    android:layout_height="wrap_content"
                    android:textColor="@color/darkTextColor"
                    />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:textSize="@dimen/login_connexion_btn_text"
            android:layout_marginHorizontal="@dimen/acticity_padding"
            app:cornerRadius="20dp"
            android:fontFamily="@font/roboto_slab_bold"
            android:layout_marginTop="25dp"
            android:text="@string/register_btn_text"/>


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/goto_login"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="@dimen/acticity_padding"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:fontFamily="@font/roboto_slab_bold"
            android:text="@string/oto_login_activity_text"
            android:layout_height="wrap_content"
            android:focusable="true" />

        <include
            android:id="@+id/llProgressBar_register"
            android:visibility="gone"
            layout="@layout/progress_layout"/>
    </androidx.appcompat.widget.LinearLayoutCompat>



</ScrollView>
